Tue Oct  1 14:45:37 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* api.2/init-v2.exp: Remove tests 104 & 105 as lockfile and
		policy database names are hard wired. [krb5-admin/46]

Thu Sep 26 17:44:10 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.0/init.exp, api.1/lock.exp, api.2/init.exp: use $K5ROOT
 	instead of /krb5

Wed Sep 25 17:45:44 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.1/lock.exp: lockfile is now kdb5.kadm5.lock

Mon Sep 23 16:31:24 1996  Barry Jaspan  <bjaspan@mit.edu>

	* changes to use runtest --srcdir:
	- Makefile.in: rewrote [csapi].* links to work in srcdir (boo,
 	hiss)
	- move lib.t to lib/lib.t
	- api.*/*.exp: s/source lib.t/load_lib lib.t/
	
Fri Sep 20 16:51:26 1996  Barry Jaspan  <bjaspan@mit.edu>

	* created Makefile.in and configure.in

Wed Sep 11 17:03:22 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: make test100 only run on client

Tue Aug 20 13:46:54 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Makefile.ov (unit-test-server-body): remove kdb5_edit

	* api.0/init.exp, api.2/init.exp, config/unix.exp, Makefile.ov:
 	use kadmin.local instead of kdb5_edit

Fri Aug 16 17:16:46 1996  Barry Jaspan  <bjaspan@mit.edu>

	* Makefile.ov: update for new lib/kadm5 layout

	* api.1/lock.exp: jik's fix for lock test 13

Thu Jul 18 20:18:30 1996  Marc Horowitz  <marc@mit.edu>

	* api.2/init-v2.exp (test150, test151): -s flag is now -S

Mon Jul  8 17:00:26 1996  Barry Jaspan  <bjaspan@mit.edu>

	* api.2/init-v2.exp: admin databases must now be created before
 	use (not created implicitly)

	* api.1/lock.exp: lock-test 13 should be a warning, not a failure.

	* api.0/rename-principal.exp: fix rename test to create principal
 	with correct salt first, and check explicitly for NO_RENAME_SALT
 	when appropriate

	* lib.t: add create_principal_with_keysalts
	
